--- a/website/templates/events/show.html
+++ b/website/templates/events/show.html
@@ -83,7 +83,7 @@
                     {% for comment in event.comments %}
                     <div class="row">
                         <div class="col-md-12">
-                            <b>{{ comment.user.name }} <span class="ml-2 text-muted">January 2024</span></b>
+                            <b>{{ comment.user.name }} <span class="ml-2 text-muted">{{comment.datetime}}</span></b>
                             <p>{{ comment.text }}</p>
                         </div>
                     </div>
